# reNut

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile.build  README.md  build-container.sh  build-linux.sh  build-steamdeck.sh  renut.toml  renut_config.toml
.github/ISSUE_TEMPLATE/: bug-report.yml
config/: renut_crt.toml  renut_funcs.toml  renut_funcs2.toml  renut_hooks.toml
src/: main.cpp  renut_app.h
src/renut_engine/: StopNSwap.cpp  frameHooks.cpp  globals.h  hooks.cpp  renut_logging.h  rex_macros.h  sleep.h
src/renut_engine/fixes/: mullhwucrash.cpp
src/renut_engine/overlays/: fps_overlay_dialog.h  renut_logging_overlay.h
